--- a/ORA/Content/Login.css
+++ b/ORA/Content/Login.css
@@ -1,7 +1,7 @@
 ﻿body, html {
     height: 100%;
     background-repeat: no-repeat;
-    background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+    background-image: linear-gradient(#rgb(3,51,89), white);
 }
 
 .card-container.card {
