Made changes so that I may view the data on those pages

--- a/ORA/Views/Assessment/ReadAssessments.cshtml
+++ b/ORA/Views/Assessment/ReadAssessments.cshtml
@@ -7,6 +7,9 @@
 
 <h2>ReadAssessments</h2>
 
+<span>Date: </span>
+<input name="daterange" type="datetime" />
+
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
@@ -113,5 +116,8 @@
         }
     </tr>
 </table>
-    }
+    
+<script type="text/javascript">
+    $('input[name="daterange"]').daterangepicker();
+</script>
 
