--- a/ORA/Views/Employee/DeleteEmployee.cshtml
+++ b/ORA/Views/Employee/DeleteEmployee.cshtml
@@ -76,38 +76,19 @@
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AddressID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AddressID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.TimeID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.TimeID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.WorkStatusID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.WorkStatusID)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input onclick="confirmdelete()" type="submit" value="Delete" class="btn btn-default" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
+    <script>
+        function confirmdelete() {
+            confirm("Are you sure you want to delete this employee");
+        }
+    </script>
 </div>
