--- a/ORA/Views/Employee/EmployeeDetails.cshtml
+++ b/ORA/Views/Employee/EmployeeDetails.cshtml
@@ -74,7 +74,7 @@
             @Html.DisplayFor(model => model.BirthDate)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.AddressID)
         </dt>
 
@@ -103,7 +103,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.address.City)
+            @Html.DisplayFor(model => model.address.City)*@
         </dd>
 
     </dl>
