--- a/ORA/Views/Employee/UpdateEmployee.cshtml
+++ b/ORA/Views/Employee/UpdateEmployee.cshtml
@@ -69,7 +69,7 @@
             @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
         </div>
-        @Html.HiddenFor(model => model.AddressID)
+        @*@Html.HiddenFor(model => model.AddressID)
         <div class="form-group">
             @Html.LabelFor(model => model.AddressID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -96,7 +96,7 @@
                 @Html.EditorFor(model => model.WorkStatusID, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.WorkStatusID, "", new { @class = "text-danger" })
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -105,7 +105,7 @@
         </div>
     </div>
 </div>
-}
+
 
 <div>
     @Html.ActionLink("Back to List", "Index")
