--- a/ORA/Views/KPI/ReadKPIs.cshtml
+++ b/ORA/Views/KPI/ReadKPIs.cshtml
@@ -10,6 +10,13 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+<span>From: </span>
+<input id="datefrom" name="daterange" type="datetime" />
+
+<span>From: </span>
+<input id="dateto" name="daterange" type="datetime" />
+
 <table class="table">
     <tr>
         <th>
@@ -78,7 +85,7 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model) {
     <tr>
 
         @Html.HiddenFor(modelItem => item.KPIID)
@@ -155,3 +162,16 @@
 }
 
 </table>
+
+
+<script type="text/javascript">
+        $('input[name="daterange"]').daterangepicker({
+            singleDatePicker: true,
+            showDropdowns: true
+        });
+</script>
+<script type="text/javascript">
+    $(function () {
+         oTable = $('datatable').
+    });
+</script>
