--- a/ORA/Views/Shared/_Layout.cshtml
+++ b/ORA/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
     <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.16/datatables.min.css" />
-    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.16/datatables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="//cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css"/>
+    <script type="text/javascript" src="//cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js" ></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -62,7 +62,7 @@
                         else
                         {
                             <li>@Html.ActionLink("Register", "CreateEmployee", "Employee")</li>
-                            <li>@Html.ActionLink("Login", "Login", "Login")</li>
+                            <li id="hidethis">@Html.ActionLink("Login", "Login", "Login")</li>
                         }
                     </ul>
                 </div>
