--- a/ORA/Views/Employee/DeleteEmployee.cshtml
+++ b/ORA/Views/Employee/DeleteEmployee.cshtml
@@ -83,7 +83,7 @@
 
         <div class="form-actions no-color">
             <input onclick="return confirm('Are you sure you want to delete this employee');" type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "viewemployees", "employee")
         </div>
     }
 </div>
