--- a/ORA/Views/Employee/ViewEmployees.cshtml
+++ b/ORA/Views/Employee/ViewEmployees.cshtml
@@ -65,7 +65,7 @@
             @Html.DisplayFor(modelItem => item.BirthDate)
         </td>
         <td>
-            @Html.ActionLink("Edit Employee", "UpdateEmployee", new {employeeId = item.EmployeeId}) |
+            @Html.ActionLink("Edit", "UpdateEmployee", new {employeeId = item.EmployeeId}) |
             @Html.ActionLink("Details", "EmployeeDetails", new {id = item.EmployeeId}) |
             @Html.ActionLink("Delete", "DeleteEmployee", new { employeeId = item.EmployeeId})
         </td>
